{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 17,
  "lineage": "16ab5d0c-55c9-112f-1f0e-c1cfcb03d05c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticip_wp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09360e6f06a5669b8",
            "domain": "vpc",
            "id": "eipalloc-0cd413fa84077e189",
            "instance": "i-05bce69cf8c6c39aa",
            "network_interface": "eni-01ee4d081f6b206ae",
            "private_dns": "ip-172-16-10-237.ec2.internal",
            "private_ip": "172.16.10.237",
            "public_dns": "ec2-18-214-74-109.compute-1.amazonaws.com",
            "public_ip": "18.214.74.109",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fdc0f6381202ab6a",
            "arn": "arn:aws:ec2:us-east-1:179966331834:instance/i-05bce69cf8c6c39aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05bce69cf8c6c39aa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wp_ssh",
            "monitoring": false,
            "primary_network_interface_id": "eni-01ee4d081f6b206ae",
            "private_dns": "ip-172-16-10-237.ec2.internal",
            "private_ip": "172.16.10.237",
            "public_dns": "ec2-18-214-74-109.compute-1.amazonaws.com",
            "public_ip": "18.214.74.109",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-029aef5f42f7cac32",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0997257d361829143",
            "tags": {
              "Name": "wp_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dc3ac228c0265548"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_default",
            "aws_security_group.security_wp",
            "aws_subnet.subnet_wp",
            "aws_vpc.vpc_wp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway_wp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-008c8fa0b6875c252",
            "owner_id": "179966331834",
            "tags": {
              "Name": "Gateway WP"
            },
            "vpc_id": "vpc-09bdd8e529775af9a"
          },
          "dependencies": [
            "aws_vpc.vpc_wp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0093c64f316c32212",
            "owner_id": "179966331834",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-008c8fa0b6875c252",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public WP"
            },
            "vpc_id": "vpc-09bdd8e529775af9a"
          },
          "dependencies": [
            "aws_internet_gateway.gateway_wp",
            "aws_vpc.vpc_wp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_wp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a73dd8c1ec20188",
            "route_table_id": "rtb-0093c64f316c32212",
            "subnet_id": "subnet-0997257d361829143"
          },
          "dependencies": [
            "aws_internet_gateway.gateway_wp",
            "aws_route_table.default_route",
            "aws_subnet.subnet_wp",
            "aws_vpc.vpc_wp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_wp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179966331834:security-group/sg-0dc3ac228c0265548",
            "description": "Allow connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc3ac228c0265548",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 21,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security Group - WP",
            "name_prefix": null,
            "owner_id": "179966331834",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09bdd8e529775af9a"
          },
          "dependencies": [
            "aws_vpc.vpc_wp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_wp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179966331834:subnet/subnet-0997257d361829143",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.10.0/24",
            "id": "subnet-0997257d361829143",
            "map_public_ip_on_launch": false,
            "owner_id": "179966331834",
            "tags": {
              "Name": "wp_public_subnet"
            },
            "vpc_id": "vpc-09bdd8e529775af9a"
          },
          "dependencies": [
            "aws_vpc.vpc_wp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_wp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179966331834:vpc/vpc-09bdd8e529775af9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-08212b27ed3a38e4c",
            "default_route_table_id": "rtb-085b849075c80811b",
            "default_security_group_id": "sg-056cbe62cd839e589",
            "dhcp_options_id": "dopt-d5d038ae",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09bdd8e529775af9a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-085b849075c80811b",
            "owner_id": "179966331834",
            "tags": {
              "Name": "VPC WP Instance"
            }
          }
        }
      ]
    }
  ]
}